--- a/index.html
+++ b/index.html
@@ -3,51 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABE - Asociación del Banco Estudiantil</title>
-    <link rel="stylesheet" href="bancoestudiantil/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <script src="bancoestudiantil/script.js" defer></script>
+    <title>Asociación del Banco Estudiantil (ABE)</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Banco Estudiantil (ABE)</h1>
+    </header>
 
-    <div class="header">🏦 ABE - Asociación del Banco Estudiantil</div>
+    <section class="container">
+        <h2>Registro de Cuenta</h2>
+        <form id="registerForm">
+            <input type="text" id="name" placeholder="Nombre" required>
+            <input type="tel" id="phone" placeholder="Número de Teléfono" required>
+            <select id="accountType" required>
+                <option value="">Seleccione tipo de cuenta</option>
+                <option value="Ahorro">Cuenta de Ahorro</option>
+                <option value="Crédito">Cuenta de Crédito</option>
+                <option value="Préstamo">Cuenta de Préstamo</option>
+            </select>
+            <input type="password" id="password" placeholder="Contraseña" required>
+            <button type="submit">Registrar</button>
+        </form>
+        <p id="accountID"></p>
+    </section>
 
-    <!-- Registro -->
-    <div class="container">
-        <h2>🔹 Registro de Usuario</h2>
-        <input type="text" id="nombre" placeholder="Nombre completo">
-        <input type="text" id="telefono" placeholder="Número de teléfono">
-        <input type="password" id="contraseña" placeholder="Contraseña">
-        <button onclick="registrarUsuario()">Registrarse</button>
-        <div id="resultadoRegistro"></div>
-    </div>
+    <section class="container">
+        <h2>Verificar Cuenta</h2>
+        <input type="text" id="verifyID" placeholder="Ingrese su ID de cuenta">
+        <input type="password" id="verifyPassword" placeholder="Contraseña">
+        <button onclick="verifyAccount()">Verificar</button>
+        <p id="verificationResult"></p>
+    </section>
 
-    <!-- Inicio de sesión -->
-    <div class="container">
-        <h2>🔹 Iniciar Sesión</h2>
-        <input type="text" id="loginCuenta" placeholder="Número de cuenta">
-        <input type="password" id="loginContraseña" placeholder="Contraseña">
-        <button onclick="iniciarSesion()">Ingresar</button>
-        <div id="resultadoLogin"></div>
-    </div>
+    <section class="container">
+        <h2>Operaciones Bancarias</h2>
+        <input type="text" id="accountIDTransaction" placeholder="ID de cuenta">
+        <input type="password" id="passwordTransaction" placeholder="Contraseña">
+        <input type="number" id="amount" placeholder="Monto">
+        <button onclick="deposit()">Depositar</button>
+        <button onclick="withdraw()">Retirar</button>
+    </section>
 
-    <!-- Verificar Saldo -->
-    <div class="container">
-        <h2>🔹 Consulta de Saldo</h2>
-        <button onclick="verificarSaldo()">Ver Saldo</button>
-        <div id="saldoCuenta"></div>
-    </div>
+    <section class="container">
+        <h2>Transferencias</h2>
+        <input type="text" id="senderID" placeholder="Tu ID de cuenta">
+        <input type="password" id="senderPassword" placeholder="Tu contraseña">
+        <input type="text" id="receiverID" placeholder="ID de cuenta del destinatario">
+        <input type="number" id="transferAmount" placeholder="Monto">
+        <button onclick="transfer()">Transferir</button>
+    </section>
 
-    <!-- Transferencias -->
-    <div class="container">
-        <h2>🔹 Transferencia de Dinero</h2>
-        <input type="text" id="cuentaDestino" placeholder="Número de cuenta destino">
-        <input type="number" id="montoTransferencia" placeholder="Monto a transferir">
-        <button onclick="transferirDinero()">Transferir</button>
-        <div id="resultadoTransferencia"></div>
-    </div>
-
-    <div class="footer">📞 Asistencia: 829-332-9545 | ABE - Asociación del Banco Estudiantil © 2025</div>
-
+    <script src="script.js"></script>
 </body>
 </html>
